--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### DXDRAWLIB ###
-/dist/
+dist/
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
