Changed tsconfig and included all files in clientside resourcefiles

--- a/dxDrawLib-Testresource/dxDrawLib-Testresource.csproj
+++ b/dxDrawLib-Testresource/dxDrawLib-Testresource.csproj
@@ -54,6 +54,9 @@
     <Folder Include="src\dist" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="src/Client/**" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="src\Server\Main.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
