Typescript for the testresource set up

--- a/dxDrawLib-Testresource/dxDrawLib-Testresource.csproj
+++ b/dxDrawLib-Testresource/dxDrawLib-Testresource.csproj
@@ -50,14 +50,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\Client" />
-    <Folder Include="src\dist" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="src/Client/**" />
+    <Content Include="resourcefiles/**" />
+    <Content Include="tsconfig.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Server\Main.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\Client\scripts" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -72,7 +73,8 @@
       <ResurceFiles Include="resourcefiles/**/*" />
     </ItemGroup>
     <Copy SourceFiles="@(ResurceFiles)" DestinationFolder="..\..\Gameserver\resources\dxdrawlib" SkipUnchangedFiles="true" />
-    <Copy SourceFiles="../dxDrawLib/dist/dxdrawlib.js" DestinationFolder="..\..\Gameserver\resources\dxdrawlib" SkipUnchangedFiles="true"/>
+    <Copy SourceFiles="../dxDrawLib/dist/dxdrawlib.js" DestinationFolder="..\..\Gameserver\resources\dxdrawlib" SkipUnchangedFiles="true" />
+    <Copy SourceFiles="dist/dxdrawlibresource.js" DestinationFolder="..\..\Gameserver\resources\dxdrawlib" SkipUnchangedFiles="true" />
     <Copy SourceFiles="bin/$(Configuration)/dxDrawLibResource.dll" DestinationFolder="..\..\Gameserver\resources\dxdrawlib" />
     <Copy SourceFiles="bin/$(Configuration)/dxDrawLib.dll" DestinationFolder="..\..\Gameserver" />
   </Target>
