--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -34,9 +34,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="src\Client" />
+    <Folder Include="src\Client\dxdrawlib\Helpers" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Server\DxDrawLib.cs" />
+    <Compile Include="src\Server\Elements\DxElement.cs" />
+    <Compile Include="src\Server\Elements\DxWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GrandTheftMultiplayer.Server, Version=0.1.513.599, Culture=neutral, PublicKeyToken=null">
