--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -35,11 +35,14 @@
   <ItemGroup>
     <Folder Include="src\Client" />
     <Folder Include="src\Client\dxdrawlib\Helpers" />
+    <Folder Include="src\Client\dxdrawlib\Serverinterface" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Server\ClientInterface\ClientEvents.cs" />
     <Compile Include="src\Server\DxDrawLib.cs" />
     <Compile Include="src\Server\Elements\DxElement.cs" />
     <Compile Include="src\Server\Elements\DxWindow.cs" />
+    <Compile Include="src\Server\Elements\ElementEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GrandTheftMultiplayer.Server, Version=0.1.513.599, Culture=neutral, PublicKeyToken=null">
