--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -39,6 +39,9 @@
     <Compile Include="src\Server\Elements\DxElement.cs" />
     <Compile Include="src\Server\Elements\DxWindow.cs" />
     <Compile Include="src\Server\Elements\ElementEventHandler.cs" />
+    <Compile Include="src\Server\Helpers\Color.cs" />
+    <Compile Include="src\Server\Helpers\Helpers.cs" />
+    <Compile Include="src\Server\SyncEntities\SyncContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GrandTheftMultiplayer.Server, Version=0.1.513.599, Culture=neutral, PublicKeyToken=null">
