--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -54,7 +54,42 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="tsconfig.json" />
-    <Content Include="src\Client\**\*" />
+    <Content Include="src\Client\dxdrawlib.d.ts" />
+    <Content Include="src\Client\dxdrawlib\Elements\DxElement.ts" />
+    <Content Include="src\Client\dxdrawlib\Elements\DxWindow.ts" />
+    <Content Include="src\Client\dxdrawlib\GtmpApi.ts" />
+    <Content Include="src\Client\dxdrawlib\helpers\Clamp.ts" />
+    <Content Include="src\Client\dxdrawlib\helpers\Color.ts" />
+    <Content Include="src\Client\dxdrawlib\helpers\DxScreen.ts" />
+    <Content Include="src\Client\dxdrawlib\Serverinterface\ElementTransformer.ts" />
+    <Content Include="src\Client\dxdrawlib\Serverinterface\ServerEvents.ts" />
+    <Content Include="src\Client\types-gt-mp\Declarations.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.GUI.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Javascript.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Javascript.ScriptContext.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Misc.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Sound.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Streamer.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Sync.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Client.Util.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Shared.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GrandTheftMultiplayer.Shared.Math.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GTA.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GTA.Math.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GTA.Native.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GTA.NaturalMotion.d.ts" />
+    <Content Include="src\Client\types-gt-mp\GTA.UI.d.ts" />
+    <Content Include="src\Client\types-gt-mp\index.d.ts" />
+    <Content Include="src\Client\types-gt-mp\Microsoft.ClearScript.d.ts" />
+    <Content Include="src\Client\types-gt-mp\NativeUI.d.ts" />
+    <Content Include="src\Client\types-gt-mp\NativeUI.UIMenu.d.ts" />
+    <Content Include="src\Client\types-gt-mp\NativeUI.UIMenuItem.d.ts" />
+    <Content Include="src\Client\types-gt-mp\NativeUI.UIResText.d.ts" />
+    <Content Include="src\Client\types-gt-mp\System.Collections.d.ts" />
+    <Content Include="src\Client\types-gt-mp\System.Collections.Generic.d.ts" />
+    <Content Include="src\Client\types-gt-mp\System.d.ts" />
+    <Content Include="src\Client\types-gt-mp\System.Drawing.d.ts" />
+    <Content Include="src\Client\types-gt-mp\System.Windows.Forms.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="src\Client\dxdrawlib\Elements\DxButton.ts" />
