Add debug void, Set new parent

--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="src\Client\dxdrawlib\Elements\DxButton.ts" />
+    <TypeScriptCompile Include="src\Client\dxdrawlib\Elements\DxRadioButton.ts" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
