--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -32,7 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <TypeScriptCompile Include="src\Client\dxdrawlib\Helpers\Enums.ts" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Server\ClientInterface\ClientEvents.cs" />
     <Compile Include="src\Server\DxDrawLib.cs" />
