--- a/dxDrawLib/dxDrawLib.csproj
+++ b/dxDrawLib/dxDrawLib.csproj
@@ -41,7 +41,7 @@
     <Compile Include="src\Server\Elements\ElementEventHandler.cs" />
     <Compile Include="src\Server\Helpers\Color.cs" />
     <Compile Include="src\Server\Helpers\Helpers.cs" />
-    <Compile Include="src\Server\SyncEntities\SyncEntity.cs" />
+    <Compile Include="src\Server\Models\ElementSyncModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GrandTheftMultiplayer.Server, Version=0.1.513.599, Culture=neutral, PublicKeyToken=null">
